Fixes vertical align at table

--- a/modules/GUI/components/table/table.css
+++ b/modules/GUI/components/table/table.css
@@ -7,6 +7,7 @@
 .table th {
   font-size: 15px;
   padding: 10px 20px;
+  vertical-align: top;
 }
 
 .table thead td,
